[gd_scene load_steps=2 format=3 uid="uid://f76ia73j2l4p"]

[ext_resource type="Script" path="res://end_screen.gd" id="1_bsrw5"]

[node name="EndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bsrw5")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="LblStatus" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Victory!"
horizontal_alignment = 1

[node name="LblContent" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "The Villagers survived this night."
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BtnAgain" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Play Again"

[node name="BtnQuit" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Quit to Menu"

[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/BtnAgain" to="." method="_on_btn_again_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/BtnQuit" to="." method="_on_btn_quit_pressed"]
